# openmv-mcp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  mcp-inspector.json  release-please-config.json
.claude/commands/: check.md  commit.md
.github/workflows/: build.yml  ci.yml  release-build.yml  release-please.yml
cmake/: write_resource_hash.cmake
resource/: .gitignore
resource/drivers/openmv/: openmv-ae3-dfu.cat  openmv-ae3-dfu.inf  openmv-h7-dfu.cat  openmv-h7-dfu.inf  openmv-h7p-dfu.cat  openmv-h7p-dfu.inf  openmv-m4-dfu.cat  openmv-m4-dfu.inf  openmv-m7-dfu.cat  openmv-m7-dfu.inf  openmv-n6-dfu.cat  openmv-n6-dfu.inf  openmv-pt-dfu.cat  openmv-pt-dfu.inf  openmv-rt1062-dfu.cat  openmv-rt1062-dfu.inf
resource/firmware/: settings.json
resource/firmware/ARDUINO_NANO_33_BLE_SENSE/: firmware.hex
resource/firmware/ARDUINO_NANO_RP2040_CONNECT/: firmware.uf2
resource/firmware/ARDUINO_NICLA_VISION/: romfs0.img
resource/firmware/OPENMV3/: romfs0.img
resource/firmware/OPENMV4P/: romfs0.img
resource/firmware/OPENMV_AE3/: bootloader.bin.sign  firmware.lst  firmware.toc  firmware.toc.sign  firmware_M55_HE.bin.sign  firmware_M55_HP.bin.sign  firmware_pad.toc  romfs1.img
resource/firmware/scripts/: self_test.py
resource/mpy-cross/linux-x86_64/: mpy-cross
resource/mpy-cross/mac/: mpy-cross
src/: board.cpp  board.h  camera.cpp  camera.h  daemonize.cpp  daemonize.h  firmware.cpp  firmware.h  frame.cpp  frame.h  info.cpp  info.h  license.cpp  license.h  main.cpp  mcp_server.cpp  mcp_server.h  openmv_version.h  resource.cpp  resource.h
src/camera_list/: camera_list.h  camera_list_darwin.cpp  camera_list_linux.cpp  camera_list_win.cpp
src/client/: mcp_client.cpp  mcp_client.h
src/protocol/: protocol.cpp  protocol.h  protocol_detect.cpp  protocol_detect.h  protocol_v1.cpp  protocol_v1.h  protocol_v2.cpp  protocol_v2.h
src/serial_port/: serial_port.cpp  serial_port.h  serial_port_unix.cpp  serial_port_win.cpp
src/server/: mcp_context.h  mcp_server.cpp  mcp_server.h  mcp_tool.cpp  mcp_tool.h
src/subprocess/: subprocess.cpp  subprocess.h  subprocess_unix.cpp  subprocess_win.cpp
src/utils/: base64.h  crc.h  ring_buffer.h  utf8_buffer.h
tests/: base64_test.cpp  crc_test.cpp  frame_test.cpp  mcp_device_test.cpp  mcp_device_test.h  mcp_firmware_test.cpp  mcp_firmware_test.h  mcp_server_test.cpp  mcp_server_test.h  mcp_stream_test.cpp  mcp_ws_test.cpp  mcp_ws_test.h  ring_buffer_test.cpp  subprocess_test.cpp  utf8_buffer_test.cpp
vscode-extension/: .gitignore  .vscodeignore  .vscodeignore.darwin  .vscodeignore.darwin-arm64  .vscodeignore.linux-arm64  .vscodeignore.linux-x64  .vscodeignore.win32  CLAUDE.md  README.md  package.json  package.nls.cs.json  package.nls.de.json  package.nls.es.json  package.nls.fr.json  package.nls.hu.json  package.nls.it.json  package.nls.ja.json  package.nls.json  package.nls.ko.json  package.nls.pl.json  package.nls.pt-br.json  package.nls.ru.json  package.nls.tr.json  package.nls.zh-cn.json  package.nls.zh-tw.json  pnpm-lock.yaml  tsconfig.json
vscode-extension/src/: examples.ts  extension.ts  firmware.ts  frame.ts  openmv.ts  resource.ts  server-process.ts  status-bar.ts  utils.ts
